# focus-cockpit

./: .gitattributes  .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  walkthrough.md
.github/workflows/: quality.yml
docs/: GEMINI_FRONTEND_BRIEF.md
src/: main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration-tests/: Cargo.toml
src-tauri/migration-tests/tests/: migrations.rs
src-tauri/migrations/: 01_initial.sql  02_domain_rules.sql  03_write_safety.sql  04_books.sql
src-tauri/security-policy/: Cargo.toml
src-tauri/security-policy/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/credential_storage/: mod.rs
src-tauri/src/native_files/: mod.rs
src/app/: App.tsx  demoHooks.ts  queryClient.ts  queryKeys.ts  routes.tsx
src/books/: BookModal.tsx  BooksScreen.tsx  bookHooks.ts  bookRepository.test.ts  bookRepository.ts  bookSchema.test.ts  bookSchema.ts
src/courses/: CourseModal.tsx  CoursesScreen.tsx  courseHooks.ts  courseRepository.test.ts  courseRepository.ts  courseSchema.test.ts  courseSchema.ts
src/credentials/: CredentialModal.tsx  CredentialPreview.tsx  CredentialsScreen.tsx  credentialHooks.ts  credentialRepository.ts  credentialSchema.test.ts  credentialSchema.ts
src/database/: db.test.ts  db.ts  nativeCapability.test.ts  recordDeletionSafety.test.ts  seed.test.ts  seed.ts  transaction.ts
src/design-system/: tokens.css
src/focus/: FavoriteShortcutsBlock.tsx  week.ts  (+10 more)
(+43 files in other folders)
